2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) : drop 'attr' argument
	* src/foreign-pajek-parser.y (igraph_i_pajek_attr) : removed
	* examples/simple/foreign.c : updated

2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_delete_edges) : rewritten to
	use edge set as parameter
	* src/structural_properties.c (igraph_rewire, igraph_simplify) :
	updated
	* examples/simple/igraph_delete_edges.c : updated

	* src/iterators.c (igraph_i_eit_pairs, igraph_eit_create) : checks 
	added

	* src/iterators.c (igraph_vs_as_vector, igraph_vit_as_vector)
	(igraph_es_as_vector, igraph_eit_as_vector) : added

	* src/iterators.c (igraph_i_eit_path) : length bug corrected
	
2006-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eid) : added
	* examples/simple/igraph_get_eid.c : added

	* src/iterators.c (igraph_es_pairs, igraph_es_pairs_small)
	(igraph_es_path, igraph_es_path_small, igraph_i_eit_pairs)
	(igraph_i_eit_path) : added
	(igraph_es_destroy, igraph_eit_create) : added PAIRS and PATH
	* examples/simple/igraph_es_pairs.c : added
	* examples/simple/igraph_es_path.c : added

	* src/igraph.h (igraph_es_t) : 'path' data type added
	* src/type_indexededgelist.c (igraph_get_eid) : 'directed' option added
	* src/iterators.c (igraph_es_pairs, igraph_es_pairs_small)
	(igraph_es_path, igraph_es_path_small) : 'directed' option added
	(igraph_eit_destroy, igraph_i_eit_pairs, igraph_i_eit_path) : updated
	* examples/simple/igraph_get_eid.c : updated
	* examples/simple/igraph_es_pairs.c : updated
	* examples/simple/igraph_es_path.c : updated

2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) : reset line number
	* src/foreign-pajek-lexer.l (igraph_i_pajek_reset_scanner) : added
	* src/foreign-pajek-parser.y (igraph_pajek_yyerror) : updated 
	to produce better error message and reset flex scanner
