@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!DOCTYPE chapter PUBLIC "-//OASIS//DTD DocBook XML V4.3//EN" 
+               "http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd" [
+<!ENTITY igraph "<command>igraph</command>">
+]>
+
+<chapter id="igraph-Operators">
+<title>Graph Operators</title>
+
+<!-- doxrox-include igraph_disjoint_union -->
+
+</chapter>
